--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         }
       })(window.location);
     </script>
+    <!-- End Single Page Apps for GitHub Pages -->
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
